remove placements section, sanitize app with autopep8
- We do not allow public accessing CDC and hence the section is useless
- Add template for mess menu to the readme.md
